Fixed some whitespace issues

--- a/src/components/back-to-top/_back-to-top.scss
+++ b/src/components/back-to-top/_back-to-top.scss
@@ -8,7 +8,7 @@
     width: fit-content;
     padding: 0.5em 0;
 
-    > a {
+    > .ons-back-to-top__link {
       padding: 0;
     }
   }
@@ -22,7 +22,7 @@
     height: fit-content;
     left: 0;
 
-    > a {
+    > .ons-back-to-top__link {
       padding: 0.7em 0;
       position: relative;
       display: block;
